force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the Household member is Active within the household or Inactive (removed from household)</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>