force-app/main/default/objects/Account/fields/Any_additional_considerations_for_housin__c.field-meta.xml
<CustomField>
    <fullName>Any_additional_considerations_for_housin__c</fullName>
    <description>Please indicate any of the following additional considerations for housing that apply to your household</description>
    <label>Any additional consideration for housing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wheelchair accessible unit with a roll-in shower required</fullName>
            </value>
            <value>
                <fullName>Wheelchair accessible unit without a roll-in shower required</fullName>
            </value>
            <value>
                <fullName>Others, Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>