force-app/main/default/objects/Account/fields/Are_you_employed__c.field-meta.xml
<CustomField>
    <fullName>Are_you_employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you employed?</label>
    <type>Checkbox</type>
</CustomField>