force-app/main/default/objects/Account/fields/Are_you_included_in_any_other_active_app__c.field-meta.xml
<CustomField>
    <fullName>Are_you_included_in_any_other_active_app__c</fullName>
    <description>Are you included in any other active applications for housing subsidy that you are aware of?</description>
    <label>Included in any other housing subsidy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>