force-app/main/default/objects/Account/fields/Currently_receive_a_housing_subsidy__c.field-meta.xml
<CustomField>
    <fullName>Currently_receive_a_housing_subsidy__c</fullName>
    <description>Do you currently receive a housing subsidy?</description>
    <label>Currently receive a housing subsidy ?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>