force-app/main/default/objects/Account/fields/Ever_received_a_housing_subsidy_in_past__c.field-meta.xml
<CustomField>
    <fullName>Ever_received_a_housing_subsidy_in_past__c</fullName>
    <description>Have you ever received a housing subsidy in the past?</description>
    <label>Ever received a housing subsidy in past</label>
    <length>50</length>
    <type>Text</type>
</CustomField>