force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Client and household gender</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>No Single Gender</fullName>
            </value>
            <value>
                <fullName>Questioning</fullName>
            </value>
            <value>
                <fullName>Transgender</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know/Client Refused</fullName>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>