force-app/main/default/objects/Account/fields/Housing_Services_help_you_with__c.field-meta.xml
<CustomField>
    <fullName>Housing_Services_help_you_with__c</fullName>
    <label>Housing Services help you with ?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation-related accessibility issues</fullName>
            </value>
            <value>
                <fullName>Application for waitlist for housing subsidy</fullName>
            </value>
            <value>
                <fullName>Eviction risk</fullName>
            </value>
            <value>
                <fullName>First and last month&apos;s rent</fullName>
            </value>
            <value>
                <fullName>Furniture and/or appliance needs</fullName>
            </value>
            <value>
                <fullName>Home maintenance or cleaning</fullName>
            </value>
            <value>
                <fullName>Homelessness services</fullName>
            </value>
            <value>
                <fullName>Would you like to be added to the By-Name List to have coordinated access to homelessness supports, including additional housing opportunities specifically for people experiencing homelessness?</fullName>
            </value>
            <value>
                <fullName>Mortgage arrears</fullName>
            </value>
            <value>
                <fullName>Moving costs</fullName>
            </value>
            <value>
                <fullName>Personal safety (i.e., domestic violence, human trafficking)</fullName>
            </value>
            <value>
                <fullName>Pest infestation</fullName>
            </value>
            <value>
                <fullName>Rental arrears</fullName>
            </value>
            <value>
                <fullName>Storage costs</fullName>
            </value>
            <value>
                <fullName>Third-party application support (i.e., Ontario Energy Support Program, Low-income Energy Assistance Program)</fullName>
            </value>
            <value>
                <fullName>Utility arrears</fullName>
            </value>
            <value>
                <fullName>Utility deposit and connection fees</fullName>
            </value>
            <value>
                <fullName>Utility reconnection</fullName>
            </value>
            <value>
                <fullName>Other please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>