force-app/main/default/objects/Account/fields/In_which_City_Shelter_is_Required__c.field-meta.xml
<CustomField>
    <fullName>In_which_City_Shelter_is_Required__c</fullName>
    <label>In which City Shelter is Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barrie</fullName>
            </value>
            <value>
                <fullName>Belleville</fullName>
            </value>
            <value>
                <fullName>Brampton</fullName>
            </value>
            <value>
                <fullName>Brant</fullName>
            </value>
            <value>
                <fullName>Brantford</fullName>
            </value>
            <value>
                <fullName>Brockville</fullName>
            </value>
            <value>
                <fullName>Burlington</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Clarence-Rockland</fullName>
            </value>
            <value>
                <fullName>Cornwall</fullName>
            </value>
            <value>
                <fullName>Dryden</fullName>
            </value>
            <value>
                <fullName>Elliot Lake</fullName>
            </value>
            <value>
                <fullName>Greater Sudbury</fullName>
            </value>
            <value>
                <fullName>Guelph</fullName>
            </value>
            <value>
                <fullName>Haldimand County</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>Kawartha Lakes</fullName>
            </value>
            <value>
                <fullName>Kenora</fullName>
            </value>
            <value>
                <fullName>Kingston</fullName>
            </value>
            <value>
                <fullName>Kitchener</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Markham</fullName>
            </value>
            <value>
                <fullName>Mississauga</fullName>
            </value>
            <value>
                <fullName>Niagara Falls</fullName>
            </value>
            <value>
                <fullName>Norfolk County</fullName>
            </value>
            <value>
                <fullName>North Bay</fullName>
            </value>
            <value>
                <fullName>Orillia</fullName>
            </value>
            <value>
                <fullName>Oshawa</fullName>
            </value>
            <value>
                <fullName>Ottawa</fullName>
            </value>
            <value>
                <fullName>Owen Sound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>