force-app/main/default/objects/Account/fields/IntakeSource__c.field-meta.xml
<CustomField>
    <fullName>IntakeSource__c</fullName>
    <label>IntakeSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homelessness</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>