force-app/main/default/objects/Account/fields/Preferred_City_or_County__c.field-meta.xml
<CustomField>
    <fullName>Preferred_City_or_County__c</fullName>
    <label>Preferred City or County</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Preferred_State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Corpus Christi</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>El Paso</fullName>
            </value>
            <value>
                <fullName>Fort Worth</fullName>
            </value>
            <value>
                <fullName>Galveston</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>San Antonio</fullName>
            </value>
            <value>
                <fullName>Chigaco</fullName>
            </value>
            <value>
                <fullName>Naperville</fullName>
            </value>
            <value>
                <fullName>Rockford</fullName>
            </value>
            <value>
                <fullName>Springfield</fullName>
            </value>
            <value>
                <fullName>Trenton</fullName>
            </value>
            <value>
                <fullName>Winchester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>