force-app/main/default/objects/Account/fields/priorities_which_apply_to_your_household__c.field-meta.xml
<CustomField>
    <fullName>priorities_which_apply_to_your_household__c</fullName>
    <label>Priorities which apply to your household</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family violence</fullName>
            </value>
            <value>
                <fullName>Human trafficking</fullName>
            </value>
            <value>
                <fullName>Terminal illness</fullName>
            </value>
            <value>
                <fullName>Insitu (currently residing in subsidized building)</fullName>
            </value>
            <value>
                <fullName>Overhoused (currently in receipt of a subsidy)</fullName>
            </value>
            <value>
                <fullName>No priorities apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>