force-app/main/default/objects/Account/fields/Repayment_plan_in_place_for_arrears__c.field-meta.xml
<CustomField>
    <fullName>Repayment_plan_in_place_for_arrears__c</fullName>
    <description>Is there a repayment plan in place for arrears?</description>
    <label>Repayment plan in place for arrears ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>