force-app/main/default/objects/Account/fields/Request_Action__c.field-meta.xml
<CustomField>
    <fullName>Request_Action__c</fullName>
    <label>Request_Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RequestActionPicklistSet</valueSetName>
    </valueSet>
</CustomField>