force-app/main/default/objects/Account/fields/Required_Shelter_Home__c.field-meta.xml
<CustomField>
    <fullName>Required_Shelter_Home__c</fullName>
    <label>Required Shelter Home</label>
    <length>100</length>
    <type>Text</type>
</CustomField>