force-app/main/default/objects/Account/fields/what_size_unit_you_require__c.field-meta.xml
<CustomField>
    <fullName>what_size_unit_you_require__c</fullName>
    <description>Please indicate what size unit you require</description>
    <label>what size unit you require ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelor</fullName>
            </value>
            <value>
                <fullName>1-Bedroom</fullName>
            </value>
            <value>
                <fullName>2-Bedroom</fullName>
            </value>
            <value>
                <fullName>3-Bedroom</fullName>
            </value>
            <value>
                <fullName>4-Bedroom</fullName>
            </value>
            <value>
                <fullName>5-Bedroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>