force-app/main/default/objects/Account/listViews/All_Household_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Household_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Household_Account</value>
    </filters>
    <label>All Household Accounts</label>
</ListView>